remove redis from backend
